[metadata]
# replace with your username:
name = TSU_Module
version = 0.0.3
author = Natasha Upchurch
author_email = tashaskyup@gmail.com
description = A small example package
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src